--- a/conocimientos.html
+++ b/conocimientos.html
@@ -48,7 +48,7 @@
                     <u>Idiomas</u>:Ingles básico
                 </li>
             </ul>   
-            <img class="foto_imagen" src="img/conocimientos.png" alt="" />
+            <img class="foto_conocimiento" src="img/conocimientos.png" alt="" />
         </div>
         </div>
     </main>
