--- a/estudios.html
+++ b/estudios.html
@@ -38,7 +38,7 @@
         <div class="main_presentacion">
             <div class="main_estudios_caja">
                 <p >Bachiller con orientación en informática 2016/2020.<br>Licenciatura en Hoteleria y Turismo 2021/2022.<br> Tecnicatura en desarrollo de software 2023.</p>
-                <img class="foto_imagen" src="img/estudios.png" alt="" />
+                <img class="foto_estudios" src="img/estudios.png" alt="" />
             </div>
         </div>
     </main>
