--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <li>Correo Electrónico: bautistamiano@gmail.com</li>
                     <li>Número de telefono: 1166470739</li>
                 </ul>
-                <img class="foto_imagen" src="img/ImagenCvBauti.jpg" alt="" />
+                <img class="foto_bautista" src="img/ImagenCvBauti.jpg" alt="" />
             </div>
         </div>
     </main>
