--- a/trabajo.html
+++ b/trabajo.html
@@ -44,7 +44,7 @@
                     <li>Manejo de redes sociales.</li>
                     <li>Atención al cliente y post venta.</li>
                 </ul>
-                <img class="foto_imagen" src="img/logo_baniplast.png" alt="" />
+                <img class="foto_trabajo" src="img/logo_baniplast.png" alt="" />
             </div>  
         </div>
     </main>
