--- a/competencias.html
+++ b/competencias.html
@@ -46,7 +46,7 @@
                     <li>Expresivo</li>
                     <li>Buena comunicación</li>
                 </ul>
-                <img class="foto_imagen" src="img/competencias.png" alt="" />
+                <img class="foto_competencias" src="img/competencias.png" alt="" />
             </div>
         </div>
     </main>
