--- a/estudios.html
+++ b/estudios.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="estilos/style.css" />
     <title>Trabajo de la facu</title>
 </head>
@@ -11,24 +12,38 @@
 <body>
     <!--INICIO DE BARRA DE NAVEGACIÓN-->
     <header class="main_header">
-        <nav class="main_header_nav">
-            <ul>
-                <div class="main_header_nav_boton">
-                    <a href="index.html">Datos personales</a>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid ">
+                <a class="navbar-brand" href="./index.html">
+                    <img class="imagen-logo" src="./imagenes/Imagen de WhatsApp 2023-10-23 a las 23.45.33_fca09d21.jpg"
+                        alt="" width="100px">
+                </a>
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse" id="navbarNav" style="">
+                    <ul class="navbar-nav nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./index.html">Datos Personales</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./estudios.html">estudios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./conocimientos.html">conocimientos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./competencias.html">competencias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./trabajo.html">Trabajo</a>
+                        </li>
+                        </li>
+                    </ul>
                 </div>
-                <div class="main_header_nav_boton">
-                    <a href="./estudios.html"> Estudios</a>
-                </div>
-                <div class="main_header_nav_boton">
-                    <a href="conocimientos.html">Conocimientos</a>
-                </div>
-                <div class="main_header_nav_boton">
-                    <a href="competencias.html">Competencias</a>
-                </div>
-                <div class="main_header_nav_boton">
-                    <a href="trabajo.html">Trabajo</a>  
-                </div>
-            </ul>
+            </div>
         </nav>
     </header>
     <!--FIN DE BARRA DE NAVEGACIÓN-->
@@ -42,9 +57,13 @@
             </div>
         </div>
     </main>
-</body>
-<footer>
-    <h2 class="derechos_reservados">Derechos Reservados</h2>
-</footer>
-
-</html>
+    <footer class="footer">
+        <h2 class="derechos_reservados">Derechos Reservados</h2>
+    </footer > 
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+    </body>
+    
+    </html>
