--- a/datos_personales.html
+++ b/datos_personales.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="estilos/style.css" />
-    <title>Trabajo de la facu</title>
 </head>
 
 <body>
@@ -15,8 +14,8 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid ">
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
+                    aria-label="Toggle navigation" >
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse" id="navbarNav" style="">
@@ -47,17 +46,16 @@
     <main>
         <h2 class="main_h1_curriculum">CURRICULUM Bautista Miano Gaibisso</h2>
         <div class="main_presentacion">
-            <div class="main_competencia_caja">
+            <div class="main_presentacion_caja">
                 <ul>
-                    <li>Trabajo en equipo</li>
-                    <li>Creatividad</li>
-                    <li>Paciencia</li>
-                    <li>Liderazgo</li>
-                    <li>Perseverancia</li>
-                    <li>Expresivo</li>
-                    <li>Buena comunicación</li>
+                    <li>Nombre: Bautista Miano Gaibisso</li>
+                    <li>Edad: 20 años </li>
+                    <li>Ubicación: Villa del Parque,CABA</li>
+                    <li>Nacionalidad: Argentina</li>
+                    <li>Correo Electrónico: bautistamiano@gmail.com</li>
+                    <li>Número de telefono: 1166470739</li>
                 </ul>
-                <img class="foto_competencias" src="img/competencias.png" alt="" />
+                <img class="foto_bautista" src="img/ImagenCvBauti.jpg" alt="" />
             </div>
         </div>
     </main>
