--- a/estudios.html
+++ b/estudios.html
@@ -14,10 +14,7 @@
     <header class="main_header">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid ">
-                <a class="navbar-brand" href="./index.html">
-                    <img class="imagen-logo" src="./imagenes/Imagen de WhatsApp 2023-10-23 a las 23.45.33_fca09d21.jpg"
-                        alt="" width="100px">
-                </a>
+
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -26,7 +23,7 @@
                 <div class="navbar-collapse collapse" id="navbarNav" style="">
                     <ul class="navbar-nav nav justify-content-end">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Datos Personales</a>
+                            <a class="nav-link active" aria-current="page" href="./datos_personales.html">Datos Personales</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./estudios.html">estudios</a>
