--- a/conocimientos.html
+++ b/conocimientos.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>conocimientos</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="estilos/style.css" />
-    <title>Trabajo de la facu</title>
+    <script src="./codigo.js"></script>
 </head>
 
 <body>
@@ -14,16 +15,15 @@
     <header class="main_header">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid ">
-
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
+                    aria-label="Toggle navigation" >
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse" id="navbarNav" style="">
                     <ul class="navbar-nav nav justify-content-end">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./datos_personales.html">Datos Personales</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Datos Personales</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./estudios.html">estudios</a>
@@ -37,6 +37,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./trabajo.html">Trabajo</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./juego.html">Juego</a>
                         </li>
                     </ul>
                 </div>
