--- a/index.html
+++ b/index.html
@@ -4,79 +4,67 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Datos Personales</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="estilos/style.css" />
-    <script src="./codigo.js"></script>
 </head>
 
 <body>
-
     <!--INICIO DE BARRA DE NAVEGACIÓN-->
-    <div class="header-borroso">
-        <header class="main_header">
-            <nav class="navbar navbar-expand-lg">
+    <header class="main_header">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid ">
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
+                    aria-label="Toggle navigation" >
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse" id="navbarNav" style="">
                     <ul class="navbar-nav nav justify-content-end">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page">Datos
-                                Personales</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Datos Personales</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">estudios</a>
+                            <a class="nav-link" href="./estudios.html">estudios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">conocimientos</a>
+                            <a class="nav-link" href="./conocimientos.html">conocimientos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">competencias</a>
+                            <a class="nav-link" href="./competencias.html">competencias</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Trabajo</a>
+                            <a class="nav-link" href="./trabajo.html">Trabajo</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./juego.html">Juego</a>
                         </li>
                     </ul>
-                </div>
-    </div>
-    </nav>
-    </header>
-    </div>
-
-<div class="centrar-js">
-    <h1>Mi Currículum</h1>
-    <a href="./datos_personales.html">
-        <button onclick="mostrarCurriculum()">Click para ver Currículum</button>
-    </a>
-</div>
-    <!--FIN DE BARRA DE NAVEGACIÓN-->
-    <!--INICIO DE CURRICULUM-->
-    <div class="main-borroso">
-        <main>
-            <h2 class="main_h1_curriculum">CURRICULUM Bautista Miano Gaibisso</h2>
-            <div class="main_presentacion">
-                <div class="main_presentacion_caja">
-                    <ul>
-                        <li>Nombre: Bautista Miano Gaibisso</li>
-                        <li>Edad: 20 años </li>
-                        <li>Ubicación: Villa del Parque,CABA</li>
-                        <li>Nacionalidad: Argentina</li>
-                        <li>Correo Electrónico: bautistamiano@gmail.com</li>
-                        <li>Número de telefono: 1166470739</li>
-                    </ul>
-                    <img class="foto_bautista" src="img/ImagenCvBauti.jpg" alt="" />
                 </div>
             </div>
-        </main>
-    </div>
-    <div class="footer-borroso">
-        <footer class="footer">
-            <h2 class="derechos_reservados">Derechos Reservados</h2>
-        </footer>
-    </div>
+        </nav>
+    </header>
+    <!--FIN DE BARRA DE NAVEGACIÓN-->
+    <!--INICIO DE CURRICULUM-->
+    <main>
+        <h2 class="main_h1_curriculum">CURRICULUM Bautista Miano Gaibisso</h2>
+        <div class="main_presentacion">
+            <div class="main_presentacion_caja">
+                <ul>
+                    <li>Nombre: Bautista Miano Gaibisso</li>
+                    <li>Edad: 20 años </li>
+                    <li>Ubicación: Villa del Parque,CABA</li>
+                    <li>Nacionalidad: Argentina</li>
+                    <li>Correo Electrónico: bautistamiano@gmail.com</li>
+                    <li>Número de telefono: 1166470739</li>
+                </ul>
+                <img class="foto_bautista" src="img/ImagenCvBauti.jpg" alt="" />
+            </div>
+        </div>
+    </main>
+    <footer class="footer">
+        <h2 class="derechos_reservados">Derechos Reservados</h2>
+    </footer>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
