--- a/juego.html
+++ b/juego.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Competencias</title>
+    <title>Juego</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="estilos/style.css" />
+    <script src="./codigo.js"></script>
 </head>
 
 <body>
@@ -15,8 +16,8 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid ">
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
-                    aria-label="Toggle navigation" >
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse" id="navbarNav" style="">
@@ -44,25 +45,20 @@
             </div>
         </nav>
     </header>
-    <!--FIN DE BARRA DE NAVEGACIÓN-->
-    <!--INICIO DE CURRICULUM-->
-    <main>
-        <h2 class="main_h1_curriculum">CURRICULUM Bautista Miano Gaibisso</h2>
-        <div class="main_presentacion">
-            <div class="main_competencia_caja">
-                <ul>
-                    <li>Trabajo en equipo</li>
-                    <li>Creatividad</li>
-                    <li>Paciencia</li>
-                    <li>Liderazgo</li>
-                    <li>Perseverancia</li>
-                    <li>Expresivo</li>
-                    <li>Buena comunicación</li>
-                </ul>
-                <img class="foto_competencias" src="img/competencias.png" alt="" />
-            </div>
-        </div>
+
+    <main class="contenedor-juego">
+        <h1>Bienvenido al Juego de Adivinar Número</h1>
+        <p>Intenta adivinar el número generado por la computadora (entre 1 y 20).</p>
+        <p>Tienes 5 intentos para adivinar el número.</p>
+
+        <label for="numeroUsuario">Ingresa un número (entre 1 y 20): </label>
+            <input type="number" id="numeroUsuario" min="1" max="20">
+            <button onclick="adivinarNumero()">Adivinar</button>
     </main>
+
+
+
+
     <footer class="footer">
         <h2 class="derechos_reservados">Derechos Reservados</h2>
     </footer>
