--- a/juego.html
+++ b/juego.html
@@ -47,11 +47,11 @@
     </header>
 
     <main class="contenedor-juego">
-        <h1>Bienvenido al Juego de Adivinar Número</h1>
-        <p>Intenta adivinar el número generado por la computadora (entre 1 y 20).</p>
-        <p>Tienes 5 intentos para adivinar el número.</p>
+        <h1>Adivina el número que estoy pensando</h1>
+        <p>Pensa un número (entre 1 y 20).</p>
+        <p>Tenes 5 intentos.</p>
 
-        <label for="numeroUsuario">Ingresa un número (entre 1 y 20): </label>
+        <label for="numeroUsuario">Ingresa un número: </label>
             <input type="number" id="numeroUsuario" min="1" max="20">
             <button onclick="adivinarNumero()">Adivinar</button>
     </main>
